--- a/src/app/Movie/movie.component.css
+++ b/src/app/Movie/movie.component.css
@@ -11,7 +11,6 @@
   border-top-right-radius: 25px;
   position: relative;
 }
-
 .movie {
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 38%, rgba(255, 255, 255, 0.06) 39%, rgba(30, 27, 38, 0.88) 53%, #1e1b26 55%);
   background-size: contain;
@@ -21,7 +20,6 @@
   height: auto;
   border-radius: 25px;
 }
-
 .text-movie-cont {
   padding: 0px 12px;
   text-align: justify;
@@ -83,7 +81,10 @@ h5 {
 .mr-grid {
   *zoom: 1;
 }
+#popup-card{
+  height: auto !important;
 
+}
 
 @media (max-width: 459px) {
   .movie {
