--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -46,9 +46,10 @@
               <div class="col-lg-6 login-btm login-text">
                 <!-- Error Message -->
               </div>
-              <div class="col-lg-6 login-btm login-button">
-                <button type="submit" class="btn btn-outline-primary">LOGIN</button>
-              </div>
+              
+            </div>
+            <div class="col-lg-12 login-btm login-button text-center">
+              <button type="submit" class="btn btn-outline-primary px-5">LOGIN</button>
             </div>
           </form>
         </div>
