Code updated version v3.1

--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,4 +1,15 @@
-<div class="container">
+<nav class="navbar navbar-expand-sm bg-dark">
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <h1><strong style="color: white;">Movie Buzz</strong> </h1>
+     
+    </li>
+   
+  </ul>
+</nav>
+
+
+<div class="container" readonly>
   <div class="row">
     <div class="col-lg-3 col-md-2"></div>
     <div class="col-lg-6 col-md-8 login-box">
