--- a/src/app/Movie/movie.component.html
+++ b/src/app/Movie/movie.component.html
@@ -1,3 +1,17 @@
+<nav class="navbar navbar-expand-sm bg-dark">
+  <ul class="navbar-nav">
+    <li class="nav-item">
+
+
+
+
+      <h1><strong>Movie</strong> </h1>
+    </li>
+    
+  </ul>
+</nav>
+<br>
+
 <div class="container-fluid">
   <div class="row">
     <div class="col-12 col-md-3 p-4" *ngFor="let movieList of getMovieResponse;">
@@ -23,14 +37,13 @@
     
     </div>
   </div>
-  <div class="row">
-    <!-- <button type="button" align="center" class="btn btn-primary mt-4"  [hidden]="!showMore">Load
-      More
-    </button> -->
+  <div class="col-lg-12  text-center">
+  
 
-    <button type="submit" class="btn btn-primary mt-4" [hidden]="!showMore" (click)="getMovies(nextpage)">Show More ...</button>
+    <button type="submit" style="background-color: #0DB8DE; color: white;" class="btn btn-primary mt-4" [hidden]="!showMore" (click)="getMovies(nextpage)">Show More ...</button>&nbsp;
+    <button type="submit" (click)="refresh()"  style="background-color: #0DB8DE; color: white;" class="btn btn-primary mt-4" >Refresh</button>
 
-   <!-- <button type="button" align="center" class="btn btn-primary mt-4" (click)="getMoviesPag3()">Next</button> -->
+  
   </div>
   <ng-template let-data #movie>
     <mat-dialog-actions style="justify-content: flex-end;">
