--- a/src/app/Movie/movie.component.html
+++ b/src/app/Movie/movie.component.html
@@ -1,10 +1,6 @@
 <nav class="navbar navbar-expand-sm bg-dark">
   <ul class="navbar-nav">
     <li class="nav-item">
-
-
-
-
       <h1><strong>Movie</strong> </h1>
     </li>
     
@@ -40,7 +36,7 @@
   <div class="col-lg-12  text-center">
   
 
-    <button type="submit" style="background-color: #0DB8DE; color: white;" class="btn btn-primary mt-4" [hidden]="!showMore" (click)="getMovies(nextpage)">Show More ...</button>&nbsp;
+    <button type="submit" style="background-color: #0DB8DE; color: white;" class="btn btn-primary mt-4" [hidden] ="!showMore" (click)="getMovies(nextpage)">Show More ...</button>&nbsp;
     <button type="submit" (click)="refresh()"  style="background-color: #0DB8DE; color: white;" class="btn btn-primary mt-4" >Refresh</button>
 
   
@@ -68,4 +64,5 @@
     </div>
 
   </ng-template>
+  </div>
 
